--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Progress Steps</title>
   </head>
   <body>
+    <div class="container">
+      <div class="progress-container">
+        <div id="progress" class="progress"></div>
+        <div class="circle active">1</div>
+        <div class="circle">2</div>
+        <div class="circle">3</div>
+        <div class="circle">4</div>
+      </div>
+      <button class="btn" id="prev" disabled>Prev</button>
+      <button class="btn" id="next">Next</button>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
