--- a/index.html
+++ b/index.html
@@ -8,9 +8,60 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Rotating Navigation</title>
   </head>
   <body>
+    <div class="container">
+      <div class="circle-container">
+        <div class="circle">
+          <button id="close">
+            <i class="fas fa-times"></i>
+          </button>
+          <button id="open"><i class="fas fa-bars"></i></button>
+        </div>
+      </div>
+      <div class="content">
+        <h1>Amazing Article</h1>
+        <small>xyz</small>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam,
+          consectetur dolorum cumque modi autem quis perferendis tempora
+          necessitatibus! Numquam culpa natus labore odio quidem quas fuga sint
+          mollitia a neque vero aliquam harum voluptates incidunt expedita
+          possimus suscipit, omnis iure? Veritatis esse qui est quis earum
+          voluptas sit mollitia aspernatur quas. Vero commodi odio fuga esse
+          possimus, expedita accusantium fugiat obcaecati alias autem debitis
+          nulla cupiditate quasi in deleniti quas repellendus blanditiis
+          perspiciatis, nihil quam. Tempore veritatis voluptatibus molestiae
+          quas ipsum. Obcaecati consequuntur sunt, saepe, atque at laboriosam
+          sint libero rerum autem alias amet ullam quis exercitationem nostrum
+          voluptas harum!
+        </p>
+        <img
+          src="https://images.unsplash.com/photo-1472531881330-7c4124ae6691?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80"
+          alt="butterfly"
+        />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+          voluptatibus error fugiat obcaecati totam in quibusdam similique
+          excepturi. Delectus unde vel facere saepe sunt perferendis totam,
+          maiores, aliquid eum quisquam esse voluptatem veritatis nulla
+          distinctio, tempora aut perspiciatis commodi fugiat iste quia!
+          Temporibus voluptatum corporis magnam, reprehenderit quisquam
+          obcaecati facilis voluptatibus mollitia est. Laboriosam cum sit,
+          officiis deserunt modi unde inventore! Optio adipisci temporibus
+          obcaecati cumque ullam voluptatum, officiis exercitationem repudiandae
+          in voluptate perspiciatis labore!
+        </p>
+      </div>
+    </div>
+    <nav>
+      <ul>
+        <li><i class="fas fa-home"></i> Home</li>
+        <li><i class="fas fa-user-alt"></i> About</li>
+        <li><i class="fas fa-envelope"></i> Contact</li>
+      </ul>
+    </nav>
     <script src="index.js"></script>
   </body>
 </html>
