--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Hidden Search</title>
   </head>
   <body>
+    <div class="container active">
+      <input type="text" class="input" placeholder="Search..." />
+      <button class="search-button"><i class="fas fa-search"></i></button>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
