--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Blurry Loading</title>
   </head>
   <body>
+    <section class="bg"></section>
+    <div class="loading-text">0%</div>
     <script src="index.js"></script>
   </body>
 </html>
