--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Scroll Animation</title>
   </head>
   <body>
+    <h1>Scroll to see animation</h1>
+    <div id="container">
+      <div class="content"><h2>Content</h2></div>
+      <div class="content"><h2>Content</h2></div>
+      <div class="content"><h2>Content</h2></div>
+      <div class="content"><h2>Content</h2></div>
+      <div class="content"><h2>Content</h2></div>
+      <div class="content"><h2>Content</h2></div>
+      <div class="content"><h2>Content</h2></div>
+      <div class="content"><h2>Content</h2></div>
+      <div class="content"><h2>Content</h2></div>
+      <div class="content"><h2>Content</h2></div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
