--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Split Landing</title>
   </head>
   <body>
+    <div class="container">
+      <div class="split left">
+        <h1>Playstation 5</h1>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+      <div class="split right">
+        <h1>XBox Series X</h1>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
