--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Sound Board</title>
   </head>
   <body>
+    <audio id="applause" src="sound/applause.mp3"></audio>
+    <audio id="boo" src="sound/boo.mp3"></audio>
+    <audio id="gasp" src="sound/gasp.mp3"></audio>
+    <audio id="tada" src="sound/tada.mp3"></audio>
+    <audio id="victory" src="sound/victory.mp3"></audio>
+    <audio id="wrong" src="sound/wrong.mp3"></audio>
+    <div class="button"></div>
     <script src="index.js"></script>
   </body>
 </html>
