--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Dad Jokes</title>
   </head>
   <body>
+    <div class="container">
+      <h3>Don't laugh challenge</h3>
+      <div class="joke" id="joke"></div>
+      <button class="btn" id="joke-btn" onclick="fetchData()">
+        Get Another Joke
+      </button>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
