--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>KeyCodes</title>
   </head>
   <body>
+    <div id="insert">
+      <div class="key">Press any key to get the KeyCode</div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
