--- a/index.html
+++ b/index.html
@@ -8,9 +8,52 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>FAQ</title>
   </head>
   <body>
+    <h1>Frequently Asked Questions</h1>
+    <div class="faq-container">
+      <div class="faq">
+        <h3 class="faq-title"> Why shouldn't we trust atoms? </h3>
+        <p class="faq-text"> They make up everything </p>
+        <button class="faq-toggle">
+          <i class="fas fa-chevron-down"></i>
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="faq">
+        <h3 class="faq-title"> Why shouldn't we trust atoms? </h3>
+        <p class="faq-text"> They make up everything </p>
+        <button class="faq-toggle">
+          <i class="fas fa-chevron-down"></i>
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="faq">
+        <h3 class="faq-title"> Why shouldn't we trust atoms? </h3>
+        <p class="faq-text"> They make up everything </p>
+        <button class="faq-toggle">
+          <i class="fas fa-chevron-down"></i>
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="faq">
+        <h3 class="faq-title"> Why shouldn't we trust atoms? </h3>
+        <p class="faq-text"> They make up everything </p>
+        <button class="faq-toggle">
+          <i class="fas fa-chevron-down"></i>
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="faq">
+        <h3 class="faq-title"> Why shouldn't we trust atoms? </h3>
+        <p class="faq-text"> They make up everything </p>
+        <button class="faq-toggle">
+          <i class="fas fa-chevron-down"></i>
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
