--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Random Choice Picker</title>
   </head>
   <body>
+    <div class="container">
+      <h3
+        >Enter all of the choices divided by a comma (',').<br />Press enter
+        when you're done</h3
+      >
+      <textarea
+        name="textarea"
+        class="textarea"
+        id="textarea"
+        placeholder="Enter choices here..."
+        cols="30"
+        rows="10"
+      ></textarea>
+      <div id="tags"></div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
