--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Incrementing Counter</title>
   </head>
   <body>
+    <div class="counter-container">
+      <i class="fab fa-twitter fa-3x"></i>
+      <div class="counter"></div>
+      <span>Twitter followers</span>
+    </div>
+    <div class="counter-container">
+      <i class="fab fa-youtube fa-3x"></i>
+      <div class="counter"></div>
+      <span>Youtube subscription</span>
+    </div>
+    <div class="counter-container">
+      <i class="fab fa-facebook fa-3x"></i>
+      <div class="counter"></div>
+      <span>Followers</span>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
