--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Drink Water</title>
   </head>
   <body>
+    <h1>Drink Water</h1>
+    <h3>Goal: Two liters</h3>
+    <div class="cup">
+      <div class="remained" id="remained">
+        <span id="liters">0L</span>
+        <small>Remained</small>
+      </div>
+      <div class="percentage" id="percentage"></div>
+    </div>
+    <p class="text">Select how many glasses of water that you have drank</p>
+    <div class="cups">
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
