--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Movie App</title>
   </head>
   <body>
+    <header>
+      <form id="search-form">
+        <input
+          type="text"
+          id="search"
+          class="search"
+          placeholder="Search"
+          autocomplete="new-password"
+        />
+      </form>
+    </header>
+    <main id="main"></main>
     <script src="index.js"></script>
   </body>
 </html>
