--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Theme Clock</title>
   </head>
   <body>
+    <button class="toggle">Dark mode</button>
+    <div class="clock-container">
+      <div class="clock">
+        <div class="needl hour"></div>
+        <div class="needl minute"></div>
+        <div class="needl second"></div>
+        <div class="center-point"></div>
+      </div>
+      <div class="time"></div>
+      <div class="date">Monday, November <span class="circle">2</span></div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
