--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Drang-N-Drop</title>
   </head>
   <body>
+    <div class="empty" dropzone="move">
+      <div class="fill" draggable="true"></div>
+    </div>
+    <div class="empty" dropzone="move"></div>
+    <div class="empty" dropzone="move"></div>
+    <div class="empty" dropzone="move"></div>
+    <div class="empty" dropzone="move"></div>
     <script src="index.js"></script>
   </body>
 </html>
