--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Kinetic Loader</title>
   </head>
   <body>
+    <div class="kinetic"></div>
     <script src="index.js"></script>
   </body>
 </html>
