--- a/index.html
+++ b/index.html
@@ -8,9 +8,33 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Skeleton Loader</title>
   </head>
   <body>
+    <div class="card">
+      <div class="card-header animated-bg" id="header">&nbsp;</div>
+      <div class="card-content">
+        <h3 class="card-title animated-bg animated-bg-text" id="title">
+          &nbsp;
+        </h3>
+        <p class="card-excerpt" id="excerpt">
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+        </p>
+        <div class="author">
+          <div class="profile-img animated-bg" id="profile-img">&nbsp;</div>
+          <div class="author-info">
+            <strong class="animated-bg animated-bg-text" id="name">
+              &nbsp;
+            </strong>
+            <small class="animated-bg animated-bg-text" id="date">
+              &nbsp;
+            </small>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
