--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Notification</title>
   </head>
   <body>
+    <div id="toast"></div>
+    <button class="btn" id="button">Show Notification</button>
     <script src="index.js"></script>
   </body>
 </html>
