--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Double click heart</title>
   </head>
   <body>
+    <h3>Double click on the image to <i class="fas fa-heart"></i> it</h3>
+    <small>you liked it: <span id="times">0</span> times</small>
+    <div class="loveme"></div>
     <script src="index.js"></script>
   </body>
 </html>
