--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <title></title>
+    <title>Good, Cheap, Fast</title>
   </head>
   <body>
+    <h2>How do you want your project to be?</h2>
+    <div class="toggle-container">
+      <input type="checkbox" id="good" class="toggle" />
+      <label for="good" class="label"><div class="ball"></div></label>
+      <span>Good</span>
+    </div>
+    <div class="toggle-container">
+      <input type="checkbox" id="cheap" class="toggle" />
+      <label for="cheap" class="label"><div class="ball"></div></label>
+      <span>Cheap</span>
+    </div>
+    <div class="toggle-container">
+      <input type="checkbox" id="fast" class="toggle" />
+      <label for="fast" class="label"><div class="ball"></div></label>
+      <span>Fast</span>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
